styling/index.css
html {
  height: 100%;
  width: 100%;
  font-family: "Catamaran", sans-serif;
}

body {
  background-position-y: -130px;
  background-position-x: -22px;
  background-image: url("./static_images/background.jpg");
  background-repeat: no-repeat;
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border-radius: 3px;
  -webkit-border-image: -webkit-linear-gradient(#6e6161, rgba(254, 254, 254, 1))
    1 1%;
  -moz-border-image: -moz-linear-gradient(#6e6161, rgba(254, 254, 254, 1)) 1 1%;
  -o-border-image: -o-linear-gradient(#6e6161, rgba(254, 254, 254, 1)) 1 1%;
  border-image: linear-gradient(to bottom, #6e6161, rgba(254, 254, 254, 1)) 1 1%;
}

.logo-ctr {
  border: 3px solid rgb(226, 226, 226);
  display: block;
  width: 425px;
  border-radius: 3px;
  border-image: inherit;
  background-color: #390b008f;
  font-size: 50px;
  text-align: center;
  margin-top: 100px;
  padding: 5px;
}

.logo-ctr h1 {
  background: -webkit-linear-gradient(#6e6161, rgba(254, 254, 254, 1));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

button:focus,
input[type="button"]:focus {
  outline: none;
}

.start-bar-ctr {
  border: 3px solid rgb(226, 226, 226);
  display: flex;
  width: 600px;
  border-radius: 3px;
  border-image: inherit;
  background-color: #390b008f;
  color: white;
  font-size: 50px;
  margin-top: 25px;
  flex-direction: row;
  justify-content: space-between;
  padding: 10px;
}

.word-list-heading {
  margin-top: 10px;
  margin-left: 10px;
  text-align: left;
}

.timer,
.score,
.word-list-heading {
  background: -webkit-linear-gradient(#6e6161, rgba(254, 254, 254, 1));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  font-size: 24px;
}

.word-list {
  margin-left: 10px;
  margin-top: 15px;
  margin-right: 10px;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
}

.word-list li {
  background: -webkit-linear-gradient(#6e6161, rgba(254, 254, 254, 1));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  font-size: 24px;
  margin-bottom: 5px;
  margin-right: 10px;
}

#start-button {
  font-size: 16px;
  letter-spacing: 2px;
  font-weight: 700;
  width: 100px;
  color: #330a00;
  background: linear-gradient(
    to bottom,
    rgba(226, 226, 226, 1) 0%,
    rgba(132, 132, 132, 1) 11%,
    rgba(196, 196, 196, 1) 76%,
    rgba(254, 254, 254, 1) 96%
  );
  cursor: pointer;
  border-image: inherit;
}

.game-ctr {
  display: flex;
  margin-top: 12.5px;
  height: 500px;
  width: 1000px;
  background-color: #390b008f;
  border: 3px solid rgb(226, 226, 226);
  border-image: inherit;
  border-radius: 3px;
  border-image: inherit;
  text-align: center;
  justify-content: space-around;
}

.middle-game-cntr {
  height: 95%;
  border-image: inherit;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.instructions,
.sub-words {
  margin-top: 24px;
  height: 90%;
  width: 300px;
  border: 2px solid rgb(226, 226, 226);
  border-image: inherit;
  box-sizing: border-box;
}

